# azathoth

./: .gitignore  CMakeLists.txt  README.md
Assets/shaders/: shader.frag
Azathoth/: CMakeLists.txt
Azathoth/inc/: common.h  farbfeld.h  model.h  vfs.h  window.h
Azathoth/include/: light.h  material.h  shader.h
Azathoth/src/: aps.cpp  farbfeld.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  scene.cpp  shader.cpp  strutils.cpp
Azathothpp/: CMakeLists.txt
Azathothpp/inc/: AzApplication.hpp  AzEntryPoint.hpp  AzFsUtils.hpp  AzRenderTarget.hpp  AzRenderWindow.hpp  AzResource.hpp  AzResourceManager.hpp  AzVfs.hpp  Azathoth.hpp
Azathothpp/include/: AzRenderBuffer.hpp
Azathothpp/src/: AzApplication.cpp  AzFsUtils.cpp  AzLogger.cpp  AzRenderTarget.cpp  AzRenderWindow.cpp  AzString.cpp  AzVfs.cpp
Contrib/glad/: CMakeLists.txt
Docs/: Doxyfile
Docs/html/: ams_8h_source.html  camera_8h.html  camera_8h_source.html  classInput.html  classShader.html  classWindow-members.html  classWindow.html  common_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  glcall_8h.html  (+44 more)
Sandbox/: CMakeLists.txt
inc/: ams.h  aps.h  camera.h  glcall.h  input.h  light.h  mesh.h  model.h  renderer.h  scene.h  shader.h  strutils.h  texture.h  transform.h  window.h
scripts/: folder2ff.pl  folder2ff.py  obj2aps2.py
src/: ams.cpp  ams.h  aps.cpp  aps.h  az_aps.cpp  az_aps.h  camera.cpp  camera.h  common.h  farbfeld.cpp  farbfeld.h  gl_bindable.h  glcall.cpp  glcall.h  input.cpp  log.cpp  log.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  scene.cpp  scene.h  shader.h  strutils.cpp  texture.cpp  texture.h  transform.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
srcpp/: AzMain.cpp
(+203 files in other folders)
